complete processing properties