@@ -5,7 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.3</version>
+<!--		<version>3.3.3</version>-->
+		<version>2.7.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -13,21 +14,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<springboot.mybatis.version>2.3.0</springboot.mybatis.version>
+		<springboot.dubbo.version>3.3.0</springboot.dubbo.version>
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
@@ -48,12 +37,13 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>3.0.3</version>
+			<version>${springboot.mybatis.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
+			<version>8.3.0</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -69,7 +59,7 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter-test</artifactId>
-			<version>3.0.3</version>
+			<version>${springboot.mybatis.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -77,7 +67,7 @@
 		<dependency>
 			<groupId>org.apache.dubbo</groupId>
 			<artifactId>dubbo-spring-boot-starter</artifactId>
-			<version>3.3.0</version>
+			<version>${springboot.dubbo.version}</version>
 		</dependency>
 
 		<dependency>
@@ -103,18 +93,33 @@
 				</configuration>
 			</plugin>
 
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--				<version>3.8.1</version>-->
+<!--				<configuration>-->
+<!--					<compilerVersion>21</compilerVersion>-->
+<!--					<encoding>UTF-8</encoding>-->
+<!--					<fork>true</fork>-->
+<!--					<release>21</release>-->
+<!--					<compilerArgument>&#45;&#45;enable-preview</compilerArgument>-->
+<!--					<source>21</source>-->
+<!--					<target>21</target>-->
+
+<!--				</configuration>-->
+<!--			</plugin>-->
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<compilerVersion>21</compilerVersion>
+					<compilerVersion>11</compilerVersion>
 					<encoding>UTF-8</encoding>
 					<fork>true</fork>
-					<release>21</release>
-					<compilerArgument>--enable-preview</compilerArgument>
-					<source>21</source>
-					<target>21</target>
+					<release>11</release>
+					<source>11</source>
+					<target>11</target>
 
 				</configuration>
 			</plugin>
